force-app/main/default/objects/csfb__Conga_Composer_Settings__c/fields/csfb__Comments__c.field-meta.xml
<CustomField>
    <fullName>csfb__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>