force-app/main/default/objects/csfb__Conga_Composer_Settings__c/fields/csfb__Disable_C7_Triggers__c.field-meta.xml
<CustomField>
    <fullName>csfb__Disable_C7_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable C7 Triggers</label>
    <type>Checkbox</type>
</CustomField>