force-app/main/default/objects/csfb__Conga_Composer_Settings__c/fields/csfb__Production_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Production_Org_Id__c</fullName>
    <inlineHelpText>The Org ID of the company&apos;s production instance of Salesforce.  This is used when Sandbox editions are created from the production. Conga applies organizational settings to sandbox accounts.</inlineHelpText>
    <label>Production Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>